--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -1,6 +1,6 @@
 \chapter{Background}
 
-The purpose of this chapter is to assist the reader in understand the search techniques used in this work.
+The purpose of this chapter is to assist the reader in understanding the search techniques used in this work. Section~\ref{sec:ea} will explain the framework used for the algorithms described in Sections~\ref{sec:ga},~\ref{sec:rga},~\ref{sec:pso}, and~\ref{sec:de}.
 
 \input{background/ea}
 \input{background/ga}
