--- a/doc/thesis/methodology/genetic-operators.tex
+++ b/doc/thesis/methodology/genetic-operators.tex
@@ -2,7 +2,7 @@
 
 \subsection{Crossover}
 
-The basic one-point crossover operator was chosen for the experiments. One point crossover is generally less destructive to the individuals than other forms of crossover. Other crossover operators that caused greater exploitation of the individuals had a negative affect on the overall fitness score. A crossover operator that causes minimal disruption to the individual was able to find better candidate solutions.
+The basic one-point crossover operator was chosen for the experiments (Described in Subsection~\ref{subsec:ga-operators}). One point crossover is generally less destructive to the individuals than other forms of crossover. %Other crossover operators that caused greater exploitation of the individuals had a negative affect on the overall fitness score. A crossover operator that causes minimal disruption to the individual was able to find better candidate solutions.
 
 \subsection{Mutation}
 
