--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -1,6 +1,12 @@
-%add bibtex entries here
+% biological background
 
-% introduction
+@article{yano2006manganese,
+	title={Manganese: The Oxygen-Evolving Complex and Models},
+	author={Yano, Junko and Kern, Jan},
+	journal={Encyclopedia of Inorganic and Bioinorganic Chemistry},
+	year={2006},
+	publisher={Wiley Online Library}
+}
 
 @article{oxygenicPhotosynthesis,
 	Abstract = {Photosystem II (PSII) uses light energy to split water into chemi-cal products that power the planet. The stripped protons contribute to a membrane electrochemical potential before combining with die stripped electrons to make chemical bonds and releasing O2 for power-ing respiratory metabolisms. In this review, we provide an overview of the kinetics and thermodynamics of water oxidation that highlights the conserved performance of PSIIs across species. We discuss recent ad-vances in our understanding of the site of water oxidation based upon the improved (1.9-Å resolution) atomic structure of the Mn4CaO5 water-oxidizing complex (WOC) within cyanobacterial PSII. We combine these insights with recent knowledge gained from studies of the bio-genesis and assembly of the WOC (called photoassembly) to arrive at a proposed chemical mechanism for water oxidation. [ABSTRACT FROM AUTHOR]},
@@ -9,18 +15,10 @@
 	Journal = {Annual Review of Biochemistry},
 	Keywords = {PHOTOSYSTEMS (Photosynthesis), LIGHT, WATER, PROTONS, CHEMICAL bonds, ELECTRON transport in plants, oxygen evolution, period-four oscillations, photoassembly, photoprotection, proton-coupled electron transport, water oxidation kinetics, water oxidation thermodynamics},
 	Pages = {577 - 606},
-	Title = {Photosystem II: The Reaction Center of Oxygenic Photosynthesis.},
+	Title = {Photosystem {II}: The Reaction Center of Oxygenic Photosynthesis.},
 	Volume = {82},
 	URL = {http://proxy.library.brocku.ca/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=89473480&site=eds-live&scope=site},
 	Year = {2013},
-}
-
-@article{yano2006manganese,
-  title={Manganese: The Oxygen-Evolving Complex and Models},
-  author={Yano, Junko and Kern, Jan},
-  journal={Encyclopedia of Inorganic and Bioinorganic Chemistry},
-  year={2006},
-  publisher={Wiley Online Library}
 }
 
 @article{newville2004fundamentals,
@@ -29,6 +27,65 @@
 	journal={Consortium for Advanced Radiation Sources, University of Chicago (USA)[http://xafs. org]},
 	year={2004}
 }
+
+% previous work
+
+@article{sproviero2008model,
+	title={A model of the oxygen-evolving center of photosystem {II} predicted by structural refinement based on EXAFS simulations},
+	author={Sproviero, Eduardo M and Gasc{\'o}n, Jos{\'e} A and McEvoy, James P and Brudvig, Gary W and Batista, Victor S},
+	journal={Journal of the American Chemical Society},
+	volume={130},
+	number={21},
+	pages={6728--6730},
+	year={2008},
+	publisher={ACS Publications}
+}
+
+@book{parr1989density,
+	title={Density-functional theory of atoms and molecules},
+	author={Parr, Robert G and Yang, Weitao},
+	volume={16},
+	year={1989},
+	publisher={Oxford university press}
+}
+
+@article{luber2011s1,
+	title={S$_{1}$-state model of the {O}$_{2}$-evolving complex of photosystem {II}},
+	author={Luber, Sandra and Rivalta, Ivan and Umena, Yasufumi and Kawakami, Keisuke and Shen, Jian-Ren and Kamiya, Nobuo and Brudvig, Gary W and Batista, Victor S},
+	journal={Biochemistry},
+	volume={50},
+	number={29},
+	pages={6308--6311},
+	year={2011},
+	publisher={ACS Publications}
+}
+
+% general force fields
+
+@article{ponder2003force,
+	title={Force fields for protein simulations},
+	author={Ponder, Jay W and Case, David A and others},
+	journal={Advances in protein chemistry},
+	volume={66},
+	pages={27--86},
+	year={2003},
+	publisher={ACADEMIC PRESS, INC}
+}
+
+% AMBER definition
+
+@article{cornell1995second,
+	title={A second generation force field for the simulation of proteins, nucleic acids, and organic molecules},
+	author={Cornell, Wendy D and Cieplak, Piotr and Bayly, Christopher I and Gould, Ian R and Merz, Kenneth M and Ferguson, David M and Spellmeyer, David C and Fox, Thomas and Caldwell, James W and Kollman, Peter A},
+	journal={Journal of the American Chemical Society},
+	volume={117},
+	number={19},
+	pages={5179--5197},
+	year={1995},
+	publisher={ACS Publications}
+}
+
+% problem definition
 
 @electronic{ifeffit,
 	title={IFEFFIT: Interactive XAFS Analysis},
@@ -51,95 +108,60 @@
 	note={Accessed: 2014-04-01}
 }
 
-@article{sproviero2008model,
-	title={A model of the oxygen-evolving center of photosystem II predicted by structural refinement based on EXAFS simulations},
-	author={Sproviero, Eduardo M and Gasc{\'o}n, Jos{\'e} A and McEvoy, James P and Brudvig, Gary W and Batista, Victor S},
-	journal={Journal of the American Chemical Society},
-	volume={130},
-	number={21},
-	pages={6728--6730},
-	year={2008},
-	publisher={ACS Publications}
-}
-
-@article{luber2011s1,
-	title={S1-state model of the O2-evolving complex of photosystem II},
-	author={Luber, Sandra and Rivalta, Ivan and Umena, Yasufumi and Kawakami, Keisuke and Shen, Jian-Ren and Kamiya, Nobuo and Brudvig, Gary W and Batista, Victor S},
-	journal={Biochemistry},
-	volume={50},
-	number={29},
-	pages={6308--6311},
-	year={2011},
-	publisher={ACS Publications}
-}
-
-% force fields
-
-@article{cornell1995second,
-  title={A second generation force field for the simulation of proteins, nucleic acids, and organic molecules},
-  author={Cornell, Wendy D and Cieplak, Piotr and Bayly, Christopher I and Gould, Ian R and Merz, Kenneth M and Ferguson, David M and Spellmeyer, David C and Fox, Thomas and Caldwell, James W and Kollman, Peter A},
-  journal={Journal of the American Chemical Society},
-  volume={117},
-  number={19},
-  pages={5179--5197},
-  year={1995},
-  publisher={ACS Publications}
-}
-
 % GA
 
 @book{holland1975adaptation,
-  title={Adaptation in natural and artificial systems: An introductory analysis with applications to biology, control, and artificial intelligence.},
-  author={Holland, John H},
-  year={1975},
-  publisher={U Michigan Press}
+	title={Adaptation in natural and artificial systems: An introductory analysis with applications to biology, control, and artificial intelligence.},
+	author={Holland, John H},
+	year={1975},
+	publisher={U Michigan Press}
 }
 
 @mastersthesis{comte2010bioinspired,
-  title={Bio-Inspired Optimization \& Sampling Technique for Side-chain Packing in MCCE},
-  author={Comte, Pascal},
-  school={Brock University},
-  year={2010},
-  type={Mastersthesis}
+	title={Bio-Inspired Optimization \& Sampling Technique for Side-chain Packing in MCCE},
+	author={Comte, Pascal},
+	school={Brock University},
+	year={2010},
+	type={Mastersthesis}
 }
 
 % RGA
 
 @inproceedings{hughes2013recentering,
-  title={Recentering, reanchoring \& restarting an evolutionary algorithm},
-  author={Hughes, James and Houghten, Sheridan and Ashlock, Daniel},
-  booktitle={Nature and Biologically Inspired Computing (NaBIC), 2013 World Congress on},
-  pages={76--83},
-  year={2013},
-  organization={IEEE}
+	title={Recentering, reanchoring \& restarting an evolutionary algorithm},
+	author={Hughes, James and Houghten, Sheridan and Ashlock, Daniel},
+	booktitle={Nature and Biologically Inspired Computing (NaBIC), 2013 World Congress on},
+	pages={76--83},
+	year={2013},
+	organization={IEEE}
 }
 
 @inproceedings{hughes2013edit,
-  title={Edit metric decoding: Representation strikes back},
-  author={Hughes, James and Brown, Joseph Alexander and Houghten, Sheridan and Ashlock, Daniel},
-  booktitle={Evolutionary Computation (CEC), 2013 IEEE Congress on},
-  pages={229--236},
-  year={2013},
-  organization={IEEE}
+	title={Edit metric decoding: Representation strikes back},
+	author={Hughes, James and Brown, Joseph Alexander and Houghten, Sheridan and Ashlock, Daniel},
+	booktitle={Evolutionary Computation (CEC), 2013 IEEE Congress on},
+	pages={229--236},
+	year={2013},
+	organization={IEEE}
 }
 
 % population generation
 
 @article{umena2011crystal,
-  title={Crystal structure of oxygen-evolving photosystem II at a resolution of 1.9 {\AA}},
-  author={Umena, Yasufumi and Kawakami, Keisuke and Shen, Jian-Ren and Kamiya, Nobuo},
-  journal={Nature},
-  volume={473},
-  number={7345},
-  pages={55--60},
-  year={2011},
-  publisher={Nature Publishing Group}
+	title={Crystal structure of oxygen-evolving photosystem II at a resolution of 1.9 {{\AA}}},
+	author={Umena, Yasufumi and Kawakami, Keisuke and Shen, Jian-Ren and Kamiya, Nobuo},
+	journal={Nature},
+	volume={473},
+	number={7345},
+	pages={55--60},
+	year={2011},
+	publisher={Nature Publishing Group}
 }
 
 @electronic{databank,
-  title={Crystal structure of oxygen-evolving Photosystem II at 1.9 angstrom resolution},
-  url={http://www.rcsb.org/pdb/explore/explore.do?structureId=3arc},
-  organization={PDB Protein Data Bank}
+	title={Crystal structure of oxygen-evolving Photosystem II at 1.9 angstrom resolution},
+	url={http://www.rcsb.org/pdb/explore/explore.do?structureId=3arc},
+	organization={PDB Protein Data Bank}
 }
 
 % unused
