--- a/doc/thesis/methodology/problem-encoding.tex
+++ b/doc/thesis/methodology/problem-encoding.tex
@@ -19,7 +19,7 @@ The initial run of experiments used a representation that maintained the initial
 	\label{fig:representation1}
 \end{figure}
 
-The other representation used was a list of values. The initial list of 3-dimentional coordinates was converted to a single list of decimal points as shown in~\ref{fig:representation2}. Algorithms such as particle swarm optimization and differential evolution called for a more flexible representation. For fitness evaluation the list of number was converted back to a list of 3-dimentional coordinates by taking segments of three numbers to create a 3-dimentional position.
+Algorithms such as particle swarm optimization and differential evolution called for a more flexible representation. The other representation used was simply a list of values. The initial list of 3-dimensional coordinates was converted to a single list of decimal points as shown in~\ref{fig:representation2}. It is important to note that both of these representations are showing the same information. For fitness evaluation the list of number was converted back to a list of 3-dimensional coordinates by taking segments of three numbers to create a 3-dimensional position.
 
 \begin{figure}
 	\centering
