--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -145,6 +145,19 @@
 	organization={IEEE}
 }
 
+% DE
+
+@article{storn1997differential,
+	title={Differential evolution--a simple and efficient heuristic for global optimization over continuous spaces},
+	author={Storn, Rainer and Price, Kenneth},
+	journal={Journal of global optimization},
+	volume={11},
+	number={4},
+	pages={341--359},
+	year={1997},
+	publisher={Springer}
+}
+
 % population generation
 
 @article{umena2011crystal,
