--- a/doc/thesis/background/de.tex
+++ b/doc/thesis/background/de.tex
@@ -1,7 +1,7 @@
 \section{Differential Evolution}
 \label{sec:de}
 
-Differential evolution (DE)~\ref{storn1997differential} is a population based search heuristic designed to iteratively improve candidate soltions to a problem. DE is best suited for problems containing a nonlinear and non-differentialable continuous search space. DE works by creating a new candidate solution using existing candidate solutions in the population using a \textit{mutation} operator. Once a new candidate solution is creating the fitness scores of each solution are compared and the candidate with the better fitness score is put into the new population. Figure~\ref{fig:deFlowchart} depicts how evolution occurs in DE and Subsections~\ref{subsec:de-mutation} and~\ref{subsec:de-selection} describe the operators used.
+Differential evolution (DE)~\cite{storn1997differential} is a population based search heuristic designed to iteratively improve candidate soltions to a problem. DE is best suited for problems containing a nonlinear and non-differentialable continuous search space. DE works by creating a new candidate solution using existing candidate solutions in the population using a \textit{mutation} operator. Once a new candidate solution is creating the fitness scores of each solution are compared and the candidate with the better fitness score is put into the new population. Candidate solutions in DE are refered to as \textit{agents}. Figure~\ref{fig:deFlowchart} depicts how evolution occurs in DE and Subsections~\ref{subsec:de-mutation} and~\ref{subsec:de-selection} describe the operators used.
 
 \begin{figure}[H]
   \centering
@@ -10,8 +10,32 @@ Differential evolution (DE)~\ref{storn1997differential} is a population based se
   \label{fig:deFlowchart}
 \end{figure}
 
+\subsection{Agents}
+
+The candidate solutions found in the population of a DE are refered to as agents. Each agent contains a vector of real numbers which represents their position within the search space.
+
 \subsection{Mutation}
 \label{subsec:de-mutation}
 
+The mutation operator is used to create new individuals from the existing individuals within the population. Individuals are combined using a formula to create new individuals. Algorithm~\ref{alg:de-mutation} describes the pseudocode for the mutation operator. The mutation operator is performed once for each agent in the population. To locate a new agent position first three different agents must be randomly selected from the population. The agent's position combined with the three other agents positions based on the formula shown in algorithm~\ref{alg:de-mutation}. The variable $F \in [0,2]$ is known as the differential weight, and variable $CR \in [0,1]$ is known as the crossover probability. Both of these variables are user defined.
+
+\begin{algorithm}
+	\caption{Mutation}
+	\label{alg:de-mutation}
+	\begin{algorithmic}
+
+		\FOR{each agent $X$ in the population}
+			\STATE{pick three agents $a$, $b$, $c$ randomly from the population}
+			\STATE{pick random index $R \in \{1, \ldots, n\}$}
+			\FOR{each position $y_i$ in $[y_1, \ldots, y_n]$}
+				\STATE{...}
+			\ENDFOR
+		\ENDFOR
+
+	\end{algorithmic}
+\end{algorithm}
+
 \subsection{Selection}
 \label{subsec:de-selection}
+
+The selection operator determines whether the newly created agent from the mutation operator should be placed in the new population of candidate individuals. Once the new agent is created it is evaluated based on the evaluation function described in Subsection~\ref{subsec:fitness-function}. If the new agent has an improved fitness score over the original agent, the new agent is placed in the new population. Otherwise, the original agent is place in the new population.
