--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -6,7 +6,7 @@ Before we can begin explaining the techniques we used in the next chapter it is 
 
 In previous work~\cite{sproviero2008model} the authors used DFT-QM/MM and R-QM/MM techniques to find close approximations of the experimental EXAFS spectrum of OEC in S$_{1}$. The EXAFS spectrum used in their calculations was at a poorer resolution compared to the spectra used in the experiments in our work.
 
-Density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM)~\ref{parr1989density} uses the atoms spatially dependent electron density to determine the position of each atom. Since DFT largely uses function approximations this approach is very limited.
+Density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM)~\cite{parr1989density} uses the atoms spatially dependent electron density to determine the position of each atom. Since DFT largely uses function approximations this approach is very limited.
 
 To increase their accuracy the researchers used a refined quantum mechanics/molecular mechanics (R-QM/MM) technique. This approach iteratively adjusted the molecular structure of the molecule and attempted to minimize a scoring function defined in terms of the sum of squared deviations between the experimental and calculated EXAFS spectra. A quadratic penalty was applied to each atom to ensure that their positions did not deviate too far from their original position in order to keep the energy of the system at a minimum.
 
