--- a/doc/thesis/thesis.bib
+++ b/doc/thesis/thesis.bib
@@ -158,6 +158,28 @@
 	publisher={Springer}
 }
 
+% PSO
+
+@incollection{kennedy2010particle,
+	title={Particle swarm optimization},
+	author={Kennedy, James},
+	booktitle={Encyclopedia of Machine Learning},
+	pages={760--766},
+	year={2010},
+	publisher={Springer}
+}
+
+@article{poli2007particle,
+	title={Particle swarm optimization},
+	author={Poli, Riccardo and Kennedy, James and Blackwell, Tim},
+	journal={Swarm intelligence},
+	volume={1},
+	number={1},
+	pages={33--57},
+	year={2007},
+	publisher={Springer}
+}
+
 % population generation
 
 @article{umena2011crystal,
